# Personal-Website

./: .gitignore  README.md  astro.config.mjs  package.json  tailwind.config.cjs
.github/: infrastructure-pipeline.yml
.github/workflows/: azure-static-webapp-deploy.yml  infrastructure-pipeline.yml
app/src/: config.ts
app/src/components/: SideBarMenu.astro
app/src/content/: config.ts
app/src/layouts/: BaseLayout.astro
app/src/pages/: cv.astro  index.astro  services.astro
app/src/pages/projects/: [...page].astro
app/src/pages/projects/tag/[tag]/: [...page].astro
compiler/: compile.py  pyproject.toml  readme.csv  readme.db  schema.sql
infra/deploy/: main.tf  providers.tf  terraform.tfvars  variables.tf
src/: config.ts
src/components/: Footer.astro  Header.astro  SideBarFooter.astro
src/content/: config.ts
src/layouts/: PostLayout.astro
